# src/api/swagger.yaml
@@ -14,6 +14,8 @@ servers:
 tags:
   - name: Users
     description: User CRUD operations
+  - name: User Profiles
+    description: User profile CRUD operations
 
 paths:
   /users:
@@ -45,7 +47,7 @@ paths:
             schema:
               $ref: "#/components/schemas/UserCreate"
       responses:
-        "200":
+        "201":
           description: User created
           content:
             application/json:
@@ -319,5 +321,3 @@ components:
           type: string
         avatarUrl:
           type: string
-
-    
